# pytorch-intel

./: CMakeLists.txt  INTEL_GPU_README.md  README.md  install_intel_gpu.bat  install_intel_gpu.sh
aten/src/ATen/: Context.h
aten/src/ATen/core/: VariableFallbackKernel.cpp
aten/src/ATen/detail/: OpenCLHooksInterface.cpp  OpenCLHooksInterface.h
aten/src/ATen/native/: DispatchStub.cpp  DispatchStub.h  native_functions.yaml
aten/src/ATen/native/opencl/: AbsKernel.cl  Activation.cpp  ActivationEluKernel.cl  ActivationGeluKernel.cl  ActivationGluKernel.cl  ActivationHardshrinkKernel.cl  ActivationHardsigmoidKernel.cl  ActivationHardswishKernel.cl  ActivationHardtanhKernel.cl  ActivationLeakyReluKernel.cl  ActivationLogSigmoidKernel.cl  ActivationMishKernel.cl  ActivationPreluKernel.cl  ActivationSiluKernel.cl  ActivationSoftplusKernel.cl  ActivationSoftshrinkKernel.cl  ActivationThresholdKernel.cl  AdaptiveAveragePooling.cl  AdaptiveAveragePooling3d.cl  AdaptiveMaxPooling2d.cl  AdaptiveMaxPooling3d.cl  AmpKernels.cl  (+216 more)
aten/src/ATen/opencl/: OpenCLAllocatorRegistration.cpp
aten/src/ATen/sycl/: SYCLGeneratorImpl.h
c10/: CMakeLists.txt
c10/core/: DeviceType.cpp  DispatchKey.h
c10/opencl/: CMakeLists.txt  OpenCLCachingAllocator.cpp  OpenCLCachingAllocator.h  OpenCLFunctions.cpp  OpenCLFunctions.h  OpenCLGuard.h  OpenCLMacros.h  OpenCLStream.cpp  OpenCLStream.h
c10/opencl/impl/: OpenCLGuardImpl.h
c10/sycl/: SYCLMathCompat.h
torch/headeronly/core/: DeviceType.h
torch/opencl/: __init__.py  _utils.py  memory.py
torch/testing/_internal/: common_opencl.py
(+37 files in other folders)
